# src/models/category.ts
@@ -20,8 +20,8 @@ export class Category {
     // comments!: Array<Comment>;
     
     @CreateDateColumn()
-    createdAt!: Date;
+    created_at!: Date;
 
     @UpdateDateColumn()
-    updatedAt!: Date;
+    updated_at!: Date;
 }
