# src/models/index.ts
@@ -1,5 +1,6 @@
 import { User } from './user'
 import { Category } from './category'
 import { Product } from './product'
+import { Home } from './home'
 
-export { User, Category, Product }
+export { User, Category, Product, Home }
