# src/models/user.ts
@@ -22,8 +22,8 @@ export class User {
     // comments!: Array<Comment>;
     
     @CreateDateColumn()
-    createdAt!: Date;
+    created_at!: Date;
 
     @UpdateDateColumn()
-    updatedAt!: Date;
+    updated_at!: Date;
 }
